feat(Spy): add tooltip to search results with full path of the element

--- a/src/PlatynUI.Technology.UiAutomation.Spy/ShellView.xaml
+++ b/src/PlatynUI.Technology.UiAutomation.Spy/ShellView.xaml
@@ -198,8 +198,8 @@
                         </ListBox.ItemContainerStyle>
                         <ListBox.ItemTemplate>
                             <DataTemplate>
-                                <StackPanel>
-                                    <TextBlock Text="{Binding DisplayName}"/>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{Binding DisplayName}" ToolTip="{Binding FullDisplayName}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
