--- a/src/PlatynUI.Spy/Views/MainWindow.axaml
+++ b/src/PlatynUI.Spy/Views/MainWindow.axaml
@@ -3,6 +3,9 @@
     xmlns:vm="using:PlatynUI.Spy.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="using:FluentAvalonia.UI.Controls"
+    xmlns:uip="using:FluentAvalonia.UI.Controls.Primitives"
+    xmlns:wnd="using:FluentAvalonia.UI.Windowing"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
     x:Class="PlatynUI.Spy.Views.MainWindow"
     x:DataType="vm:MainWindowViewModel"
@@ -10,9 +13,7 @@
     Title="PlatynUI.Spy"
     Width="800"
     Height="600"
-    ExtendClientAreaToDecorationsHint="True"
 >
-
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at
@@ -20,110 +21,186 @@
         <vm:MainWindowViewModel />
     </Design.DataContext>
 
-    <DockPanel>
+    <Window.KeyBindings>
+        <KeyBinding Gesture="F5"
+            Command="{Binding Refresh}" />
+        <KeyBinding Gesture="Escape"
+            Command="{Binding CancelSearch}" />
+    </Window.KeyBindings>
 
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Spacing="3" Margin="12"
-            IsHitTestVisible="False">
-            <Label VerticalAlignment="Center">PlatynUI.Spy</Label>
-        </StackPanel>
+    <Grid RowDefinitions="Auto,*">
+        <Grid Name="TitleBarHost"
+            ColumnDefinitions="Auto,Auto,*,Auto,Auto"
+            Background="Transparent">
+            <Image Margin="12 4"
+                IsHitTestVisible="False"
+                Source="/Assets/avalonia-logo.ico"
+                Width="18" Height="18"
+                DockPanel.Dock="Left"
+                Name="WindowIcon"
+                RenderOptions.BitmapInterpolationMode="HighQuality">
+                <Image.IsVisible>
+                    <OnPlatform Default="False">
+                        <On Options="Windows" Content="True" />
+                    </OnPlatform>
+                </Image.IsVisible>
+            </Image>
 
-        <Grid DockPanel.Dock="Top" ColumnDefinitions="Auto, *, Auto" Background="Transparent"
-            Margin="6">
-            <StackPanel Grid.Column="0" Orientation="Horizontal" Spacing="3">
-                <Button Name="Refresh" Command="{Binding Refresh}" Content="Refresh"
-                    VerticalAlignment="Center" />
-                <CheckBox Name="AlwaysOnTop" IsChecked="{Binding $parent[Window].Topmost}}"
-                    Content="Always On Top" VerticalAlignment="Center" />
-            </StackPanel>
-            <TextBox Grid.Column="1" Margin="3" Text="{Binding SearchText, Mode=TwoWay}"
-                Watermark="Enter your XPath Expression here and then click search..."
-                VerticalAlignment="Center">
-                <TextBox.KeyBindings>
-                    <KeyBinding Gesture="Enter"
-                        Command="{Binding Search}" />
-                </TextBox.KeyBindings>
-            </TextBox>
-            <Button Grid.Column="2" Margin="3" Content="Search" Command="{Binding Search}"
-                IsVisible="{Binding !InSearch}" VerticalAlignment="Center" />
-            <Button Grid.Column="2" Margin="3" Content="Cancel" Command="{Binding CancelSearch}"
-                IsVisible="{Binding InSearch}" VerticalAlignment="Center" />
-        </Grid>
+            <TextBlock
+                Text="{Binding Title, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                FontSize="12"
+                IsHitTestVisible="False"
+                VerticalAlignment="Center"
+                Grid.Column="1">
+                <TextBlock.IsVisible>
+                    <OnPlatform Default="False">
+                        <On Options="Windows" Content="True" />
+                    </OnPlatform>
+                </TextBlock.IsVisible>
+            </TextBlock>
 
-        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Spacing="3" Margin="6">
-            <TextBlock Text="{Binding SearchResults.Count}"
-                IsVisible="{Binding SearchResults.Count>0}" />
-            <TextBlock Text="Element(s) found." IsVisible="{Binding SearchResults.Count>0}" />
-            <TextBlock Text="{Binding LastError}" />
-        </StackPanel>
-
-        <Grid RowDefinitions="*,4,0.20*" Margin="6">
-            <Grid Grid.Row="0" ColumnDefinitions="0.60*,4,0.40*">
-                <TreeView Grid.Column="0" ItemsSource="{Binding Root}"
-                    SelectedItem="{Binding SelectedNode, Mode=TwoWay}"
-                    SelectionMode="Single"
-                    AutoScrollToSelectedItem="True"
-                >
-                    <TreeView.DataTemplates>
-                        <TreeDataTemplate DataType="vm:TreeNode"
-                            ItemsSource="{Binding Children}">
-                            <StackPanel Orientation="Horizontal" Spacing="6">
-                                <TextBlock Text="{Binding NodeName}" FontWeight="Bold">
-                                </TextBlock>
-                                <TextBlock Text="{Binding Description}" />
-                                <!-- <TextBlock Foreground="Gray" Text="{Binding ElementName}" /> -->
-                                <StackPanel.ContextMenu>
-                                    <ContextMenu>
-                                        <MenuItem Header="Refresh" Command="{Binding Refresh}"
-                                            CommandParameter="{Binding .}" />
-                                    </ContextMenu>
-                                    <!-- <MenuItem Header="Copy XPath" Command="{Binding CopyXPath}"
-                                    />
-                                    <MenuItem Header="Copy Text" Command="{Binding CopyText}" /> -->
-                                </StackPanel.ContextMenu>
-                            </StackPanel>
-                        </TreeDataTemplate>
-                    </TreeView.DataTemplates>
-                    <TreeView.Styles>
-                        <Style Selector="TreeViewItem" x:DataType="vm:TreeNode">
-                            <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
-                            <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+            <Border Grid.Column="2" Padding="6">
+                <AutoCompleteBox Name="SearchBox"
+                    MaxWidth="500"
+                    Watermark="Search..."
+                    Text="{Binding SearchText, Mode=TwoWay}">
+                    <AutoCompleteBox.Styles>
+                        <Style Selector="AutoCompleteBox /template/ TextBox#PART_TextBox">
+                            <Setter Property="InnerRightContent">
+                                <Template>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button Content="&#xE74D;"
+                                            FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                            Theme="{StaticResource TransparentButton}"
+                                            Command="{Binding $parent[TextBox].Clear}"
+                                            IsVisible="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=TextBox}, Converter={x:Static StringConverters.IsNotNullOrEmpty}}" />
+                                        <Button Content="&#xE721;"
+                                            FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                            Theme="{StaticResource TransparentButton}"
+                                            Command="{Binding Search}"
+                                            IsVisible="{Binding !InSearch}"
+                                        />
+                                        <Button Content="&#xE711;"
+                                            FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                            Theme="{StaticResource TransparentButton}"
+                                            Command="{Binding CancelSearch}"
+                                            IsVisible="{Binding InSearch}"
+                                        />
+                                    </StackPanel>
+                                </Template>
+                            </Setter>
                         </Style>
-                    </TreeView.Styles>
-                </TreeView>
-
-                <GridSplitter Grid.Column="1" />
-
-                <DataGrid Grid.Column="2" ItemsSource="{Binding SelectedNode.Attributes}"
-                    CanUserResizeColumns="true">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="Name" Binding="{Binding Name}"
-                            CanUserSort="true" />
-                        <DataGridTextColumn Header="Value" Binding="{Binding Value}" />
-                    </DataGrid.Columns>
-                </DataGrid>
-            </Grid>
-            <GridSplitter Grid.Row="1" ResizeDirection="Rows" />
-            <Border Grid.Row="2" BorderThickness="1">
-                <Grid RowDefinitions="Auto,*">
-                    <Label Grid.Row="0" Content="Results" />
-                    <ListBox Grid.Row="1" ItemsSource="{Binding SearchResults}"
-                        SelectionMode="Single"
-                        SelectedItem="{Binding ResultsSelectedNode, Mode=TwoWay}"
-                    >
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal" Spacing="6">
-                                    <TextBlock Text="{Binding NodeName}" FontWeight="Bold" />
-                                    <TextBlock Text="{Binding Description}" />
-                                    <!-- <TextBlock Foreground="Gray" Text="{Binding ElementName}"
-                                    /> -->
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </Grid>
+                    </AutoCompleteBox.Styles>
+                    <AutoCompleteBox.KeyBindings>
+                        <KeyBinding Gesture="Enter"
+                            Command="{Binding Search}" />
+                        <KeyBinding Gesture="Escape"
+                            Command="{Binding CancelSearch}" />
+                    </AutoCompleteBox.KeyBindings>
+                </AutoCompleteBox>
             </Border>
+            <ToggleSwitch Grid.Column="3" OnContent="" OffContent="" ToolTip.Tip="Always On Top"
+                IsChecked="{Binding $parent[Window].Topmost}}" />
         </Grid>
-    </DockPanel>
 
+
+        <DockPanel Grid.Row="1">
+            <Grid DockPanel.Dock="Top" ColumnDefinitions="Auto, *, Auto" IsVisible="False"
+                Margin="6">
+                <StackPanel Grid.Column="0" Orientation="Horizontal" Spacing="3">
+                    <CheckBox Name="AlwaysOnTop" IsChecked="{Binding $parent[Window].Topmost}}"
+                        Content="Always On Top" />
+                </StackPanel>
+                <TextBox Grid.Column="1" Margin="3" Text="{Binding SearchText, Mode=TwoWay}"
+                    Watermark="Enter your XPath Expression here and then click search..."
+                    VerticalAlignment="Center">
+                    <TextBox.KeyBindings>
+                        <KeyBinding Gesture="Enter"
+                            Command="{Binding Search}" />
+                    </TextBox.KeyBindings>
+                </TextBox>
+                <Button Grid.Column="2" Margin="3" Content="Search" Command="{Binding Search}"
+                    IsVisible="{Binding !InSearch}" />
+                <Button Grid.Column="2" Margin="3" Content="Cancel" Command="{Binding CancelSearch}"
+                    IsVisible="{Binding InSearch}" />
+            </Grid>
+
+            <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Spacing="3" Margin="6">
+                <TextBlock Text="{Binding SearchResults.Count}"
+                    IsVisible="{Binding SearchResults.Count>0}" />
+                <TextBlock Text="Element(s) found." IsVisible="{Binding SearchResults.Count>0}" />
+                <TextBlock Text="{Binding LastError}" />
+            </StackPanel>
+
+            <Grid RowDefinitions="*,4,0.20*" Margin="6">
+                <Grid Grid.Row="0" ColumnDefinitions="0.60*,4,0.40*">
+                    <Border Grid.Column="0" Padding="6">
+                        <TreeView ItemsSource="{Binding Root}"
+                            SelectedItem="{Binding SelectedNode, Mode=TwoWay}"
+                            SelectionMode="Single"
+                            AutoScrollToSelectedItem="True">
+                            <TreeView.DataTemplates>
+                                <TreeDataTemplate DataType="vm:TreeNode"
+                                    ItemsSource="{Binding Children}">
+                                    <StackPanel Orientation="Horizontal" Spacing="6">
+                                        <TextBlock Text="{Binding NodeName}" FontWeight="Bold">
+                                        </TextBlock>
+                                        <TextBlock Text="{Binding Description}" />
+                                        <StackPanel.ContextFlyout>
+                                            <MenuFlyout>
+                                                <MenuItem Header="Refresh"
+                                                    Command="{Binding Refresh}"
+                                                    CommandParameter="{Binding .}" />
+                                            </MenuFlyout>
+                                        </StackPanel.ContextFlyout>
+                                    </StackPanel>
+                                </TreeDataTemplate>
+                            </TreeView.DataTemplates>
+                            <TreeView.Styles>
+                                <Style Selector="TreeViewItem" x:DataType="vm:TreeNode">
+                                    <Setter Property="IsExpanded"
+                                        Value="{Binding IsExpanded, Mode=TwoWay}" />
+                                    <Setter Property="IsSelected"
+                                        Value="{Binding IsSelected, Mode=TwoWay}" />
+                                </Style>
+                            </TreeView.Styles>
+                        </TreeView>
+                    </Border>
+                    <GridSplitter Grid.Column="1" />
+                    <Border Grid.Column="2" Padding="6">
+                        <DataGrid ItemsSource="{Binding SelectedNode.Attributes}"
+                            CanUserResizeColumns="true">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="Name" Binding="{Binding Name}"
+                                    CanUserSort="true" />
+                                <DataGridTextColumn Header="Value" Binding="{Binding Value}" />
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Border>
+                </Grid>
+                <GridSplitter Grid.Row="1" ResizeDirection="Rows" />
+                <Border Grid.Row="2" Padding="6">
+                    <Grid RowDefinitions="Auto,*">
+                        <Label Grid.Row="0" Content="Results" />
+                        <ListBox Grid.Row="1" ItemsSource="{Binding SearchResults}"
+                            SelectionMode="Single"
+                            SelectedItem="{Binding ResultsSelectedNode, Mode=TwoWay}"
+                        >
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal" Spacing="6">
+                                        <TextBlock Text="{Binding NodeName}" FontWeight="Bold" />
+                                        <TextBlock Text="{Binding Description}" />
+                                        <!-- <TextBlock Foreground="Gray" Text="{Binding
+                                        ElementName}"
+                                    /> -->
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </Grid>
+                </Border>
+            </Grid>
+        </DockPanel>
+    </Grid>
 </Window>
